--- a/ib_unifinder/students/templates/application/selection.html
+++ b/ib_unifinder/students/templates/application/selection.html
@@ -8,12 +8,11 @@
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow-y: scroll;
         }
 
         .container {
@@ -21,36 +20,46 @@
             border-radius: 8px;
             padding: 20px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            max-width: 600px;
-            margin: 20px;
+            max-width: 750px;
+            max-height: 100%;
+            overflow-y: scroll;
+            display: block;
+            position: absolute;
+            margin-top: 150px;
+            margin-bottom: 40px;
+            margin-left: 380px;
         }
 
         h1 {
             text-align: center;
             font-size: 24px;
             margin-bottom: 20px;
+            
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 5px;
         }
 
         th, td {
             text-align: left;
             padding: 10px;
             border-bottom: 1px solid #ddd;
+            width: 20px;
         }
 
         th {
             background-color: #f2f2f2;
             font-weight: bold;
+            
         }
 
         td {
             font-size: 16px;
             font-weight: bold;
+            text-align: initial;
         }
 
         th, td:first-child {
@@ -67,15 +76,56 @@
             top: 20px;
             font-size: 36px;
         }
+
+        input[type=radio] {
+            margin-right: 15px;
+        }
+
+        button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            font-size: 20px;
+            cursor: pointer;
+            margin-top: 20px;
+            border-radius: 5px;
+            padding: 10px 20px;
+            position: relative;
+            bottom: 20px;
+            left: 52%;
+            top: 130%;    
+        }
+
+        button:hover {
+            background-color: #0056b3;
+            
+        }
+
+        .test{
+            top: 100%;
+            left: 0px;
+            position: relative;
+        }
+
+        form{
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
     <h1 class="ib">IB University Finder</h1>
+    <form action="{% url 'final' %}" method="POST">
+    
+    
+        {% csrf_token %}
     <div class="container">
-        <h1>University Results</h1>
+        <h1>Select a university</h1>
         <table>
             <thead>
                 <tr>
+                    <th>Major</th>
                     <th>University</th>
                     <th>Cost</th>
                 </tr>
@@ -85,13 +135,17 @@
                 {% for name, cost, website in university %}
                 <tr>
                     <td>{{ major }}</td>
-                    <td><a href={{website}}>{{ name }}</a></td>
+                    <td><input type="radio" name="uni" value='{{ name }}'>{{ name }}</input></td>
                     <td>${{ cost }}</td>
                 </tr>
                 {% endfor %}
                 {% endfor %}
             </tbody>
         </table>
+        
     </div>
+    <button>Next</button>
+    </form>
+    <div class="test"><span>All Rights Reserved.</span></div>
 </body>
 </html>
