--- a/ib_unifinder/students/templates/application/subjects.html
+++ b/ib_unifinder/students/templates/application/subjects.html
@@ -879,6 +879,20 @@
                 </select>
             </div>
         </fieldset>
+        <fieldset>
+            <legend>Additionals</legend>
+            <div>
+                <label>
+                    <input type="checkbox" name="additional" value="living"> Housing
+                    </label>
+                <label>
+                    <input type="checkbox" name="additional" value="transportation"> Transportation
+                    </label>
+                <label>
+                    <input type="checkbox" name="additional" value="food"> Food
+                    </label>               
+            </div>
+        </fieldset>
         <button type="submit">Show Universities</button>
     </form>
 </body>
