--- a/ib_unifinder/students/templates/application/welcome.html
+++ b/ib_unifinder/students/templates/application/welcome.html
@@ -59,7 +59,7 @@
     <a class="logout-link" href="{% url 'logout' %}">Logout</a>
     <h1>
       IB University Finder <br /><br /><br /><br /><br /><br /><br />Welcome, {{
-      request.user }}!
+      context.user }}!
     </h1>
     <span>Find out the best-fit university based on your features!</span>
     <br />
