--- a/ib_unifinder/students/templates/application/final.html
+++ b/ib_unifinder/students/templates/application/final.html
@@ -29,12 +29,7 @@
     <h1 style="color: blue">Congratulations for choosing {{ context.uni }}!</h1>
     <br>
     <br>
-    <h2>Total Annual Fees is: {{ context.cost }} </h2>
-    <!-- {% for i in context %}
-        {% if i != 'uni' %}
-            <h1>{{ i }} </h1>
-        {% endif %}
-    {% endfor %} -->
+    <h2>Total Annual Fees is: ${{ context.cost }} </h2>
     <br>
     <a href={{context.website}}><h2>Visit the university website here</h2></h2>
 </body>
