--- a/ib_unifinder/students/templates/application/welcome.html
+++ b/ib_unifinder/students/templates/application/welcome.html
@@ -69,6 +69,7 @@
     <br />
     <button id="get-started">Let's get started!</button>
     <script>
+      // Redirect to subjects page when button is clicked
       document.getElementById("get-started").addEventListener("click", () => {
         window.location.href = "{% url 'subjects' %}";
       });
